testcases/error/invalid_clock_domain.veryl
module invalid_clock_domain {
    inst u: 'a invalid_clock_domain2;
}

module invalid_clock_domain2 {}
